[package]
name = "http_status_code_check"
version = "0.1.5"
edition = "2021"
authors = ["Ramon Moraes <ramonmoraes.foss@gmail.com>"]
description = "dead simple binary to check http status code(s) returned from health-check endpoint."
license = "MIT"
documentation = "https://docs.rs/http_status_code_check/latest/http_status_code_check/"
homepage = "https://github.com/rmoraes92/http_status_code_check"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }

[target.x86_64-unknown-linux-gnu.dependencies]
reqwest = { version = "0.12.15", features = ["blocking"] }

[target.x86_64-unknown-linux-musl.dependencies]
reqwest = { version = "0.12.15", features = [
    "blocking",
    "native-tls-vendored",
] }

[dev-dependencies]
httpmock = "0.7.0"
